<resources>
    <string name="app_name">Travel Guide App</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="search">Search</string>
    <string name="trip">Trip</string>
    <string name="guide">Guide</string>
    <string name="where_s_your_next_destination">Where’s your \nnext destination?</string>
    <string name="flights">Flights</string>
    <string name="hotels">Hotels</string>
    <string name="cars">Cars</string>
    <string name="taxi">Taxi</string>
    <string name="deals">Deals</string>
    <string name="top_destination">TOP DESTINATION</string>
    <string name="where_next">Where next?</string>
    <string name="capital">Capital</string>
    <string name="country">Country</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="trip_plan">Trip Plan</string>
    <string name="trips">Trips</string>
    <string name="bookmark">Bookmark</string>
</resources>