<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.mehmetdulger.travelguideapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_navigation_home_to_detailFragment"
            app:destination="@id/detailFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.mehmetdulger.travelguideapp.ui.search.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search">
        <action
            android:id="@+id/action_navigation_search_to_detailFragment"
            app:destination="@id/detailFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_guide"
        android:name="com.mehmetdulger.travelguideapp.ui.guide.GuideFragment"
        android:label="@string/guide"
        tools:layout="@layout/fragment_guide">
        <action
            android:id="@+id/action_navigation_guide_to_detailFragment"
            app:destination="@id/detailFragment" />
    </fragment>
    <fragment
        android:id="@+id/navigation_trip"
        android:name="com.mehmetdulger.travelguideapp.ui.guide.TripFragment"
        android:label="@string/trip"
        tools:layout="@layout/fragment_trip">
        <action
            android:id="@+id/action_navigation_trip_to_detailFragment"
            app:destination="@id/detailFragment" />
    </fragment>
    <fragment
        android:id="@+id/detailFragment"
        android:name="com.mehmetdulger.travelguideapp.ui.detail.DetailFragment"
        android:label="fragment_detail"
        tools:layout="@layout/fragment_detail">

        <action
            android:id="@+id/action_detailFragment_to_bookmarkFragment"
            app:destination="@id/bookmarkFragment" />
        <argument
            android:name="currentAllData"
            app:argType="com.mehmetdulger.travelguideapp.TravelGuideModel" />

    </fragment>
    <fragment
        android:id="@+id/bookmarkFragment"
        android:name="com.mehmetdulger.travelguideapp.ui.Trip.Bookmark.BookmarkFragment"
        android:label="fragment_bookmark"
        tools:layout="@layout/fragment_bookmark" />
    <fragment
        android:id="@+id/allFragment"
        android:name="com.mehmetdulger.travelguideapp.ui.home.all.AllFragment"
        android:label="AllFragment" >
        <action
            android:id="@+id/action_allFragment_to_detailFragment"
            app:destination="@id/detailFragment" />
    </fragment>
    <fragment
        android:id="@+id/flightsFragment"
        android:name="com.mehmetdulger.travelguideapp.ui.home.flights.FlightsFragment"
        android:label="FlightsFragment" >
        <action
            android:id="@+id/action_flightsFragment_to_detailFragment"
            app:destination="@id/detailFragment" />
    </fragment>
    <fragment
        android:id="@+id/hotelsFragment"
        android:name="com.mehmetdulger.travelguideapp.ui.home.hotels.HotelsFragment"
        android:label="HotelsFragment" >
        <action
            android:id="@+id/action_hotelsFragment_to_detailFragment"
            app:destination="@id/detailFragment" />
    </fragment>
    <fragment
        android:id="@+id/transportationsFragment"
        android:name="com.mehmetdulger.travelguideapp.ui.home.transportations.TransportationsFragment"
        android:label="TransportationsFragment" >
        <action
            android:id="@+id/action_transportationsFragment_to_detailFragment"
            app:destination="@id/detailFragment" />
    </fragment>
</navigation>